# term_structure

./: .gitignore  README.md  pyproject.toml
data/processed/: term_premia.csv  term_premia_acm.csv  term_premia_ff.csv
data/raw/Q/: macro_data.csv  yield_curve.csv
mains/: create_figures.py  get_term_premia.py  main.py  out_of_sample_comparisons.py
src/: paths.py
src/model/: common_trend.py  estimation.py  figures.py  forecast.py  holding_period_excess_returns.py  params.py  pricing_factors.py  trend.py
src/model/data/: macro_data.py  yield_curve.py
src/model/figures/: __init__.py  base.py  model_parameters.py  returns.py  yield_curves.py
src/model/time/: time_params.py  time_window.py
src/utils/: base_utils.py  model_utils.py
